2010-12-12 Sun  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinylib.el (ti::buffer-parse-grep-line): Fix let*.
	(ti::file-access-mode-to-string): Adjust doc.

2010-12-12  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydesk.el (tinydesk-remove-file-coments): Call
	`ti::buffer-remove-whitespace-eol'.

	* tiny/tinyeat.el
	(top level): Update docs.
	(tinyeat-install-default-bindings): Add C-S-k, C-S-SPC.

2010-12-08 Wed  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinylibm.el (ti::package-use-dynamic-compilation): Remove.
	Obsolete; the default is t.

	* tiny/tinylisp.el (tinylisp--menu-compile): Update
	(t)ree description.
	(tinylisp-byte-compile-display-call-tree): Add sort
	criteria `byte-compile-call-tree-sort'.

2010-12-07 Tue  Jari Aalto  <jari.aalto@cante.net>

        * tiny/tinylib.el
	(top level): Convert all 10+ years old macro definitions
	to modern style.
	(ti::package-version-info): adjust docstring.
        (ti::package-get-header): Move location.
        (ti::file-complete-filename-minibuffer-macro): Modernize.
        (ti::process-perl-process-environment-macro): Modernize.
        (ti::macrov-minor-mode): Modernize.
        (ti::macrov-minor-mode-1): Modernize.
        (ti::macrof-minor-mode-1): Modernize.
        (ti::macrof-minor-mode-on): Modernize.
        (ti::macrof-minor-mode-off): Modernize.
        (ti::macrof-minor-mode-help): Modernize.
        (ti::macrof-minor-mode-commentary): Modernize.
        (ti::macrof-minor-mode-viper-attach): Modernize.
        (ti::macrof-minor-mode-install): Modernize.
        (ti::macrof-minor-mode-install-1): Modernize.
        (ti::macrof-define-keys): Modernize.
        (ti::macrov-mode-line-mode-menu): Modernize.
        (ti::macrof-define-keys-1): Modernize.
        (ti::macrof-define-keys-1): Modernize.
        (ti::macrof-version-bug-report-1): Modernize.
        (ti::macrof-version-bug-report): Modernize.
        (ti::macrof-debug-1): Modernize.
        (ti::macrof-debug-lowlevel): Modernize.